--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Julietta
-                        <span class="text-primary">Finklestein</span>
+                        <a href="./scratch/misc.html">Julietta
+                            <span class="text-primary">Finklestein</span>
+                        </a>
                     </h1>
                     <div class="subheading mb-5">
                         1234 7th Ave NW · Rochester, NY 56789 · (555) 666-7778 ·
